# Prototype-key_auto

./: README.md  bun.lockb  index.html  package-lock.json  package.json
.github/workflows/: main.yml
src/: App.css  App.tsx  App.vue  Global.css  hooks.ts  main.ts  main.tsx  styles.css
src-tauri/: Actions.json  Cargo.toml  EventKey.json  Events.json  tauri.conf.json
src-tauri/src/: commands.rs  core.rs  main.rs  types.rs  utils.rs
src/EventListener/: index.ts
src/components/: EventSelectorInput.tsx  editor.vue  ex.tsx
src/components/ActionCard/: index.tsx
src/components/KeyEditor/: index.tsx
src/components/NavigationBar/: index.tsx  style.css
src/components/PausePlayButton/: index.tsx
src/components/RecordPausePlayButton/: index.tsx
src/components/pages/: home.tsx  new.tsx
src/components/pages/CreateAction/: index.tsx
src/components/pages/Home/: index.tsx  style.css
src/features/: activeParallelActionsSlice.ts  eventSlice.ts
src/store/: EventStore.ts
src/types/: index.ts
